🔗 FIX NAVIGATION 2025 - เชื่อมต่อหน้าคาร์ดีเทลและดูรถทั้งหมด
✅ Navigation Flow สมบูรณ์:
🔗 ปุ่ม 'ดูรถทั้งหมด' → docs/all-cars.html (same window)
🔗 ปุ่ม 'ดูรายละเอียด' → docs/car-detail/{car_handle}.html (same window)
🔗 หน้า all-cars.html มี auto-redirect กลับหน้าแรกทันที
🔗 หน้า car-detail มี breadcrumb nav กลับหน้าแรก

🎯 Fixed Links:
- เปลี่ยนจาก external URL chiangraiusedcar.com → internal docs/all-cars.html
- ลบ target='_blank' ออกเพื่อใช้ same window navigation
- car-detail links ใช้ docs/car-detail/ path ที่มีอยู่จริง
- breadcrumb '<a href='/'>หน้าแรก</a>' ทำงานได้

🚀 User Experience:
- คลิก 'ดูรถทั้งหมด' → redirect กลับหน้าแรกทันที
- คลิก 'ดูรายละเอียด' → เข้าหน้า car-detail
- ใน car-detail คลิก 'หน้าแรก' → กลับหน้าแรก
- Navigation flow สมบูรณ์ไม่มีหน้าต่างใหม่

✅ Result: เชื่อมต่อครบถ้วน ไม่มี broken links!

--- a/index_main_version.html
+++ b/index_main_version.html
@@ -949,8 +949,8 @@
                 <div class="loading">⏳ กำลังโหลดข้อมูลรถ...</div>
             </div>
             
-            <!-- View All Button - No Extra Space -->
-            <a href="https://chiangraiusedcar.com/all-cars-1" class="btn-view-all" target="_blank" rel="noopener">
+            <!-- View All Button - Same Window -->
+            <a href="docs/all-cars.html" class="btn-view-all">
                 🔍 ดูรถทั้งหมด
             </a>
         </section>
