--- a/car-widget-fixed.html
+++ b/car-widget-fixed.html
@@ -209,7 +209,7 @@
     }
     .car-list { 
       display: grid; 
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); 
+      grid-template-columns: repeat(2, 1fr); 
       gap: 20px; 
       max-width: 1000px;
       margin: 0 auto;
@@ -315,6 +315,18 @@
         font-size: 1.5em;
       }
     }
+    @media (max-width: 480px) {
+      .car-widget {
+        padding: 15px;
+      }
+      .car-widget h1 {
+        font-size: 1.3em;
+        margin-bottom: 15px;
+      }
+      .car-list {
+        gap: 15px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -325,7 +337,7 @@
       <!-- Cars will be loaded here -->
     </div>
     
-    <a class="see-all-btn" href="https://chiangraiusedcar.com/all-cars" target="_blank" rel="noopener">ดูรถทั้งหมด →</a>
+    <a class="see-all-btn" href="https://chiangraiusedcar.com/all-cars-1" target="_blank" rel="noopener">ดูรถทั้งหมด →</a>
     
     <div class="widget-footer">
       🚗 ครูหนึ่งรถสวย - รถมือสองเชียงใหม่
@@ -341,7 +353,7 @@
         status: "พร้อมส่งมอบ",
         description: "(พรีเมี่ยมรถนำเข้าจากญี่ปุ่น) คนเล่นรถห้ามพลาด TOYOTA EZTIMA HYBRID SYNERGY DRIVE 2.4 E-Four G ปี 2007 ตัวท็อปสุด รถนำเข้าสไตล์ญี่ปุ่น ระบบไฮบริดเทคโนโลยีสุดยอด",
         image: "https://cdn.shopify.com/s/files/1/0718/1441/4580/files/rn-image_picker_lib_temp_ee2a3ecd-09bf-433d-94c8-09063d62288b.jpg?v=1725842830",
-        link: "https://www.kn-goodcar.com/car-detail/toyota-eztima-hybrid-synergy-drive-2-4-e-four-g-ปี-2007-นำเข้า-2552"
+        link: "https://nblues.github.io/Chiangmai-usedcar/car-detail.html"
       },
       {
         title: "FORD RANGER 4dr DCab WildTrak Auto 10sp 2WD 2.0 Turbo DCT",
@@ -349,7 +361,7 @@
         status: "พร้อมส่งมอบ",
         description: "พร้อมใช้งานครับ กระบะ4ประตู เกียร์ออโต้ มือแรกเดิมๆ สภาพดีเยี่ยม พร้อมใช้งานครับ FORD RANGER 4dr DCab WildTrak Auto เครื่องยนต์ 2.0 TURBO DIESEL",
         image: "https://cdn.shopify.com/s/files/1/0718/1441/4580/files/rn-image_picker_lib_temp_dad1423a-d88f-45e3-9447-2bf36bbd4121.jpg?v=1728001559",
-        link: "https://www.kn-goodcar.com/car-detail/ford-ranger-4dr-dcab-wildtrak-auto-10sp-2wd-2-0-turbo-dct"
+        link: "https://nblues.github.io/Chiangmai-usedcar/car-detail.html"
       },
       {
         title: "Toyota CHR 1.8 HV HYBRID TOP 2019 ปี 2019",
@@ -357,7 +369,7 @@
         status: "พร้อมส่งมอบ",
         description: "Option ล้นล้น ประหยัดสุดๆ พร้อมป้ายมงคล Toyota CHR 1.8 HV HYBRID TOP AUTO 2019 ปี 2019 สี แดงแก้ว เกียร์ ออโต้ ได้ตัวท็อป Option เต็ม",
         image: "https://cdn.shopify.com/s/files/1/0718/1441/4580/files/rn-image_picker_lib_temp_5ad018db-8b9b-4086-b1c7-8ee568f1b8c4.jpg?v=1728002956",
-        link: "https://www.kn-goodcar.com/car-detail/toyota-chr-1-8-hv-hybrid-top-2019-ปี-2019"
+        link: "https://nblues.github.io/Chiangmai-usedcar/car-detail.html"
       },
       {
         title: "Hyundai H-1 Elite NS ปี 2022",
@@ -365,7 +377,7 @@
         status: "พร้อมส่งมอบ",
         description: "Hyundai H-1 Elite NS ปี 2022วิ่งน้อยแค่ 21,xxx Km.รถมือเดียวป้ายแดงออกศูนย์เชียงใหม่ ใช้ป้ายกทม. เกียร์ออโต้ 5 Speed + Sequential Shift",
         image: "https://cdn.shopify.com/s/files/1/0718/1441/4580/files/rn-image_picker_lib_temp_2fa17074-aa8b-47bd-bdf1-f6bbe0ff3762.jpg?v=1730925406",
-        link: "https://www.kn-goodcar.com/car-detail/hyundai-h-1-elite-ns-ปี-2022"
+        link: "https://nblues.github.io/Chiangmai-usedcar/car-detail.html"
       },
       {
         title: "D-MAX Hi-Lander 2.5 X-SERIES Ddi i-TEQ SUPER PLATINUM",
@@ -373,7 +385,7 @@
         status: "พร้อมส่งมอบ",
         description: "D-MAX Hi-Lander 2.5 X-SERIES Ddi i-TEQ SUPER PLATINUM เกียร์ธรรมดา รถสวยเดิมๆ พร้อมใช้งาน เครื่องยนต์ 2500 cc. DIESEL M/T 2011/2554 พร้อมทะเบียนมงคล 7474",
         image: "https://cdn.shopify.com/s/files/1/0718/1441/4580/files/rn-image_picker_lib_temp_a28baac3-7e7e-4549-96e4-c86e00dd1f14.jpg?v=1733598390",
-        link: "https://www.kn-goodcar.com/car-detail/d-max-hi-lander-2-5-x-series-ddi-i-teq-super-platinum-เกียร์ธรรมดา"
+        link: "https://nblues.github.io/Chiangmai-usedcar/car-detail.html"
       },
       {
         title: "FORD RANGER 2.2 Cab XLT 6sp 4WD",
@@ -381,7 +393,7 @@
         status: "พร้อมส่งมอบ",
         description: "เข้าใหม่กระบะโอเพ่นแคป เกียร์ธรรมดา 4x4 (รถมือแรกเดิมๆ) สภาพดีมากพร้อมใช้งานครับ FORD RANGER 2.2 Cab XLT 6sp 4WD เกียร์ธรรมดา รถสวยเดิมๆ มือเดียว",
         image: "https://cdn.shopify.com/s/files/1/0718/1441/4580/files/rn-image_picker_lib_temp_ee25ea88-901f-4f0e-8331-10bf37d7ccbd.jpg?v=1734101780",
-        link: "https://www.kn-goodcar.com/car-detail/ford-ranger-2-2-cab-xlt-6sp-4wd"
+        link: "https://nblues.github.io/Chiangmai-usedcar/car-detail.html"
       }
     ];
 
