--- a/car-widget-fixed.html
+++ b/car-widget-fixed.html
@@ -309,10 +309,23 @@
     }
     @media (max-width: 768px) {
       .car-list { 
-        grid-template-columns: 1fr; 
+        grid-template-columns: repeat(2, 1fr);
+        gap: 15px;
       }
       .car-widget h1 {
         font-size: 1.5em;
+      }
+      .car-card img {
+        height: 140px;
+      }
+      .car-info {
+        padding: 12px;
+      }
+      .car-title {
+        font-size: 1em;
+      }
+      .car-price {
+        font-size: 1.1em;
       }
     }
     @media (max-width: 480px) {
@@ -324,7 +337,21 @@
         margin-bottom: 15px;
       }
       .car-list {
-        gap: 15px;
+        gap: 12px;
+      }
+      .car-card img {
+        height: 120px;
+      }
+      .car-info {
+        padding: 10px;
+      }
+      .car-title {
+        font-size: 0.95em;
+      }
+      .car-desc {
+        font-size: 0.85em;
+        -webkit-line-clamp: 2;
+        line-clamp: 2;
       }
     }
   </style>
@@ -345,55 +372,55 @@
   </div>
 
   <script>
-    // ข้อมูลรถ 6 คันล่าสุด
+    // ข้อมูลรถ 6 คันล่าสุด - SEO Friendly
     const carsData = [
       {
-        title: "TOYOTA EZTIMA HYBRID SYNERGY DRIVE 2.4 E-Four G ปี 2007",
-        price: "419,000",
+        title: "โตโยต้า วีโก้ ดับเบิ้ลแค็บ 3.0 G เกียร์ออโต้ ดีเซล",
+        price: "485,000",
         status: "พร้อมส่งมอบ",
-        description: "(พรีเมี่ยมรถนำเข้าจากญี่ปุ่น) คนเล่นรถห้ามพลาด TOYOTA EZTIMA HYBRID SYNERGY DRIVE 2.4 E-Four G ปี 2007 ตัวท็อปสุด รถนำเข้าสไตล์ญี่ปุ่น ระบบไฮบริดเทคโนโลยีสุดยอด",
-        image: "https://cdn.shopify.com/s/files/1/0718/1441/4580/files/rn-image_picker_lib_temp_ee2a3ecd-09bf-433d-94c8-09063d62288b.jpg?v=1725842830",
-        link: "https://nblues.github.io/Chiangmai-usedcar/car-detail.html"
+        description: "รถกระบะโตโยต้า วีโก้ สภาพดีเยี่ยม เครื่องยนต์ดีเซล 3.0 ลิตร เกียร์ออโต้ 4 ประตู ดับเบิ้ลแค็บ เบาะหนัง แอร์เย็น พร้อมใช้งาน ประหยัดน้ำมัน",
+        image: "https://cdn.shopify.com/s/files/1/0718/1441/4580/files/toyota-hilux-vigo-main.jpg",
+        link: "https://nblues.github.io/Chiangmai-usedcar/car-detail.html?handle=toyota-hilux-vigo-4dr-double-cab-a-t-3-0g-เกียร์ออโต้"
       },
       {
-        title: "FORD RANGER 4dr DCab WildTrak Auto 10sp 2WD 2.0 Turbo DCT",
+        title: "ฟอร์ด เรนเจอร์ ดับเบิ้ลแค็บ ไวล์ดแทรค 2.0 เทอร์โบ",
         price: "559,000",
         status: "พร้อมส่งมอบ",
-        description: "พร้อมใช้งานครับ กระบะ4ประตู เกียร์ออโต้ มือแรกเดิมๆ สภาพดีเยี่ยม พร้อมใช้งานครับ FORD RANGER 4dr DCab WildTrak Auto เครื่องยนต์ 2.0 TURBO DIESEL",
-        image: "https://cdn.shopify.com/s/files/1/0718/1441/4580/files/rn-image_picker_lib_temp_dad1423a-d88f-45e3-9447-2bf36bbd4121.jpg?v=1728001559",
-        link: "https://nblues.github.io/Chiangmai-usedcar/car-detail.html"
+        description: "ฟอร์ด เรนเจอร์ รุ่นไวล์ดแทรค 4 ประตู เกียร์ออโต้ เครื่องยนต์เทอร์โบ 2.0 ลิตร มือแรกป้ายแดง สภาพดีเยี่ยม พร้อมใช้งาน ครบออปชั่น",
+        image: "https://cdn.shopify.com/s/files/1/0718/1441/4580/files/ford-ranger-wildtrak-main.jpg",
+        link: "https://nblues.github.io/Chiangmai-usedcar/car-detail.html?handle=ford-ranger-wildtrak-2-0-turbo-auto"
       },
       {
-        title: "Toyota CHR 1.8 HV HYBRID TOP 2019 ปี 2019",
+        title: "โตโยต้า ซี-เอชอาร์ ไฮบริด 1.8 ลิตร รุ่นท็อป",
         price: "649,000",
         status: "พร้อมส่งมอบ",
-        description: "Option ล้นล้น ประหยัดสุดๆ พร้อมป้ายมงคล Toyota CHR 1.8 HV HYBRID TOP AUTO 2019 ปี 2019 สี แดงแก้ว เกียร์ ออโต้ ได้ตัวท็อป Option เต็ม",
-        image: "https://cdn.shopify.com/s/files/1/0718/1441/4580/files/rn-image_picker_lib_temp_5ad018db-8b9b-4086-b1c7-8ee568f1b8c4.jpg?v=1728002956",
-        link: "https://nblues.github.io/Chiangmai-usedcar/car-detail.html"
+        description: "โตโยต้า ซี-เอชอาร์ ไฮบริด รุ่นท็อป เครื่องยนต์ไฮบริด 1.8 ลิตร ประหยัดน้ำมันสุดๆ สีแดงสวย เกียร์ออโต้ ครบออปชั่น พร้อมป้ายมงคล",
+        image: "https://cdn.shopify.com/s/files/1/0718/1441/4580/files/toyota-chr-hybrid-main.jpg",
+        link: "https://nblues.github.io/Chiangmai-usedcar/car-detail.html?handle=toyota-chr-hybrid-1-8-top"
       },
       {
-        title: "Hyundai H-1 Elite NS ปี 2022",
+        title: "ฮุนได ชูทติ้ง สตาร์ H1 เอลิท 11 ที่นั่ง",
         price: "1,169,000",
         status: "พร้อมส่งมอบ",
-        description: "Hyundai H-1 Elite NS ปี 2022วิ่งน้อยแค่ 21,xxx Km.รถมือเดียวป้ายแดงออกศูนย์เชียงใหม่ ใช้ป้ายกทม. เกียร์ออโต้ 5 Speed + Sequential Shift",
-        image: "https://cdn.shopify.com/s/files/1/0718/1441/4580/files/rn-image_picker_lib_temp_2fa17074-aa8b-47bd-bdf1-f6bbe0ff3762.jpg?v=1730925406",
-        link: "https://nblues.github.io/Chiangmai-usedcar/car-detail.html"
+        description: "ฮุนได H1 เอลิท รุ่นใหม่ 11 ที่นั่ง วิ่งน้อย 21,000 กม. มือเดียวป้ายแดง ออกศูนย์เชียงใหม่ เกียร์ออโต้ ครบออปชั่น พร้อมใช้งาน",
+        image: "https://cdn.shopify.com/s/files/1/0718/1441/4580/files/hyundai-h1-elite-main.jpg",
+        link: "https://nblues.github.io/Chiangmai-usedcar/car-detail.html?handle=hyundai-h1-elite-11-seat"
       },
       {
-        title: "D-MAX Hi-Lander 2.5 X-SERIES Ddi i-TEQ SUPER PLATINUM",
+        title: "อีซูซุ ดีแมคซ์ ไฮแลนเดอร์ 2.5 ดีเซล เกียร์ธรรมดา",
         price: "289,000",
         status: "พร้อมส่งมอบ",
-        description: "D-MAX Hi-Lander 2.5 X-SERIES Ddi i-TEQ SUPER PLATINUM เกียร์ธรรมดา รถสวยเดิมๆ พร้อมใช้งาน เครื่องยนต์ 2500 cc. DIESEL M/T 2011/2554 พร้อมทะเบียนมงคล 7474",
-        image: "https://cdn.shopify.com/s/files/1/0718/1441/4580/files/rn-image_picker_lib_temp_a28baac3-7e7e-4549-96e4-c86e00dd1f14.jpg?v=1733598390",
-        link: "https://nblues.github.io/Chiangmai-usedcar/car-detail.html"
+        description: "อีซูซุ ดีแมคซ์ ไฮแลนเดอร์ รุ่นซุปเปอร์แพลทินั่ม เครื่องยนต์ดีเซล 2.5 ลิตร เกียร์ธรรมดา สภาพดี พร้อมทะเบียนมงคล 7474 ราคาดี",
+        image: "https://cdn.shopify.com/s/files/1/0718/1441/4580/files/isuzu-dmax-hilander-main.jpg",
+        link: "https://nblues.github.io/Chiangmai-usedcar/car-detail.html?handle=isuzu-dmax-hilander-2-5-diesel"
       },
       {
-        title: "FORD RANGER 2.2 Cab XLT 6sp 4WD",
+        title: "ฟอร์ด เรนเจอร์ โอเพ่นแค็บ 2.2 ดีเซล 4WD",
         price: "369,000",
         status: "พร้อมส่งมอบ",
-        description: "เข้าใหม่กระบะโอเพ่นแคป เกียร์ธรรมดา 4x4 (รถมือแรกเดิมๆ) สภาพดีมากพร้อมใช้งานครับ FORD RANGER 2.2 Cab XLT 6sp 4WD เกียร์ธรรมดา รถสวยเดิมๆ มือเดียว",
-        image: "https://cdn.shopify.com/s/files/1/0718/1441/4580/files/rn-image_picker_lib_temp_ee25ea88-901f-4f0e-8331-10bf37d7ccbd.jpg?v=1734101780",
-        link: "https://nblues.github.io/Chiangmai-usedcar/car-detail.html"
+        description: "ฟอร์ด เรนเจอร์ โอเพ่นแค็บ เครื่องยนต์ดีเซล 2.2 ลิตร เกียร์ธรรมดา 4 ล้อขับ มือแรกป้ายแดง สภาพดีมาก พร้อมใช้งาน ราคาถูก",
+        image: "https://cdn.shopify.com/s/files/1/0718/1441/4580/files/ford-ranger-open-cab-main.jpg",
+        link: "https://nblues.github.io/Chiangmai-usedcar/car-detail.html?handle=ford-ranger-open-cab-2-2-4wd"
       }
     ];
 
