--- a/car-widget-fixed.html
+++ b/car-widget-fixed.html
@@ -213,6 +213,7 @@
       gap: 20px; 
       max-width: 1000px;
       margin: 0 auto;
+      align-items: start;
     }
     .car-card { 
       background: #fff; 
@@ -221,6 +222,9 @@
       overflow: hidden; 
       border: 1px solid #ffeed8;
       transition: transform 0.2s, box-shadow 0.2s;
+      display: flex;
+      flex-direction: column;
+      height: 100%;
     }
     .car-card:hover {
       transform: translateY(-2px);
@@ -234,6 +238,9 @@
     }
     .car-info { 
       padding: 15px;
+      display: flex;
+      flex-direction: column;
+      flex-grow: 1;
     }
     .car-title { 
       font-size: 1.1em; 
@@ -246,6 +253,7 @@
       line-clamp: 2;
       -webkit-box-orient: vertical;
       overflow: hidden;
+      min-height: 2.6em;
     }
     .car-price { 
       color: #1b8801; 
@@ -268,6 +276,8 @@
       line-clamp: 3;
       -webkit-box-orient: vertical;
       overflow: hidden;
+      flex-grow: 1;
+      min-height: 4.2em;
     }
     .btn-detail { 
       display: block; 
@@ -278,7 +288,7 @@
       text-decoration: none; 
       font-weight: 600; 
       padding: 10px 0; 
-      margin-top: 10px;
+      margin-top: auto;
       transition: background 0.2s;
     }
     .btn-detail:hover {
@@ -323,9 +333,13 @@
       }
       .car-title {
         font-size: 1em;
+        min-height: 2.4em;
       }
       .car-price {
         font-size: 1.1em;
+      }
+      .car-desc {
+        min-height: 3.6em;
       }
     }
     @media (max-width: 480px) {
@@ -347,11 +361,13 @@
       }
       .car-title {
         font-size: 0.95em;
+        min-height: 2.2em;
       }
       .car-desc {
         font-size: 0.85em;
         -webkit-line-clamp: 2;
         line-clamp: 2;
+        min-height: 2.8em;
       }
     }
   </style>
