🔗 แก้ไขลิงกเชื่อมต่อให้ถกต้อง - ใช้ลิงกเดิมที่มีอย่แล้ว

--- a/car-widget-minimal.html
+++ b/car-widget-minimal.html
@@ -227,7 +227,7 @@
         status: 'พร้อมขาย',
         image: 'https://cdn.shopify.com/s/files/1/0609/4307/0588/files/honda-city-hatchback.jpg?v=1703840000',
         description: 'สภาพดี เกียร์ออโต้ CVT ประหยัดน้ำมัน',
-        link: 'car-detail.html?car=honda-city-hatchback'
+        link: 'car-detail.html?car=honda-city-hatchback-1-0-turbo-รุ่น-sv-ปี-2021-เกียร์ออโต้'
       },
       {
         title: 'Toyota Camry 2.5 Hybrid Premium 2020',
